/**
 * Groups V2 protobuf definitions for Signal.
 * Subset needed for fetching group details.
 */
syntax = "proto3";

package signalservice;

option go_package = "github.com/gwillem/signal-go/internal/proto";

message Member {
  enum Role {
    UNKNOWN = 0;
    DEFAULT = 1;
    ADMINISTRATOR = 2;
  }

  bytes userId = 1;
  Role role = 2;
  bytes profileKey = 3;
  bytes presentation = 4;
  uint32 joinedAtVersion = 5;
}

message AccessControl {
  enum AccessRequired {
    UNKNOWN = 0;
    ANY = 1;
    MEMBER = 2;
    ADMINISTRATOR = 3;
    UNSATISFIABLE = 4;
  }

  AccessRequired attributes = 1;
  AccessRequired members = 2;
  AccessRequired addFromInviteLink = 3;
}

// Group is the encrypted group state returned by the Groups V2 API.
message Group {
  bytes publicKey = 1;
  bytes title = 2;                   // encrypted GroupAttributeBlob
  bytes description = 11;            // encrypted GroupAttributeBlob
  string avatarUrl = 3;
  bytes disappearingMessagesTimer = 4;
  AccessControl accessControl = 5;
  uint32 version = 6;                // group revision
  repeated Member members = 7;
}

// GroupAttributeBlob is the decrypted format for title/description.
message GroupAttributeBlob {
  oneof content {
    string title = 1;
    bytes avatar = 2;
    uint32 disappearingMessagesDuration = 3;
    string descriptionText = 4;
  }
}

// GroupResponse wraps Group with optional endorsements.
message GroupResponse {
  Group group = 1;
  bytes group_send_endorsements_response = 2;
}
